added close model

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <header class="back-project__header">
         <h2 class="back-project__title">Back this project</h2>
         <div class="back-project__close">
-          <img src="./images/icon-close-modal.svg" alt="Close Modal" data-close="closeModal">
+          <img src="./images/icon-close-modal.svg" alt="Close Modal" data-close="selectReward">
         </div>
       </header>
       <p class="back-project__description">
