added count on total backers

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </p>
 
         <div class="mastercraft__footer">
-          <button class="btn btn--primary btn--lrg">Back this project</button>
+          <button id="backProject" class="btn btn--primary btn--lrg">Back this project</button>
           <img class="mastercraft__bookmark" src="./images/icon-bookmark.svg"
             alt="Bookmark Mastercraft bamboo monitor riser">
         </div>
@@ -78,7 +78,7 @@
 
           <div>
             <header class="backers__header">
-              <h2 class="backers__total">5,007</h2>
+              <h2 id="totalBackers" class="backers__total">5,007</h2>
             </header>
             <p class="backers__subheader">total backers</p>
             <hr class="backers__rule">
