--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
 
           <div class="progress-bar">
-            <div class="progress-bar__bg"></div>
+            <div id="progressBar" class="progress-bar__bg"></div>
           </div>
         </div>
       </section>
