--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           <li class="nav__list-item">
             <a class="nav__list-link" href="#">About</a>
           </li>
-          <hr class="nav__list-rule">
+          <li class="nav__list-rule"></li>
           <li class="nav__list-item">
             <a class="nav__list-link" href="#">Discover</a>
           </li>
-          <hr class="nav__list-rule">
+          <li class="nav__list-rule"></li>
           <li class="nav__list-item">
             <a class="nav__list-link" href="#">Get Started</a>
           </li>
@@ -63,10 +63,12 @@
 
           <div id="bookmarked" class="bookmark br-33">
             <div>
-              <img id="bookmark" class="bookmark__img" src="./images/icon-bookmark.svg" alt="Bookmark Mastercraft bamboo monitor riser">
+              <img id="bookmark" class="bookmark__img" src="./images/icon-bookmark.svg"
+                alt="Bookmark Mastercraft bamboo monitor riser">
             </div>
             <div>
-              <img id="bookmarkCyan" class="bookmark__img bookmark__img--cyan" src="./images/icon-bookmark-cyan.svg" alt="Bookmark Mastercraft bamboo monitor riser">
+              <img id="bookmarkCyan" class="bookmark__img bookmark__img--cyan" src="./images/icon-bookmark-cyan.svg"
+                alt="Bookmark Mastercraft bamboo monitor riser">
             </div>
             <div>
               <p id="bookmarkedPar" class="bookmark__par">Bookmarked</p>
@@ -98,7 +100,7 @@
 
           <div>
             <header class="backers__header">
-              <h2 id="daysLeft" class="backers__total"></h2>
+              <h2 id="daysLeft" class="backers__total">0</h2>
             </header>
             <p class="backers__subheader">days left</p>
           </div>
@@ -153,7 +155,8 @@
               </header>
 
               <div>
-                <button id="bambooRewardBtn" class="btn btn--primary btn--md" type="submit" data-open="selectReward">Select Reward</button>
+                <button id="bambooRewardBtn" class="btn btn--primary btn--md" type="submit"
+                  data-open="selectReward">Select Reward</button>
               </div>
             </div>
           </div>
@@ -212,7 +215,8 @@
               </header>
 
               <div>
-                <button id="mahoganyRewardBtn" class="btn btn--primary btn--md" type="submit" data-open="selectReward">Select Reward</button>
+                <button id="mahoganyRewardBtn" class="btn btn--primary btn--md" type="submit"
+                  data-open="selectReward">Select Reward</button>
               </div>
             </div>
           </div>
@@ -226,7 +230,8 @@
     <div class="container">
       <header class="back-project__header">
         <h2 class="back-project__title">Back this project</h2>
-        <img class="back-project__close" src="./images/icon-close-modal.svg" alt="Close Back Project" data-close="selectReward" loading="lazy">
+        <img class="back-project__close" src="./images/icon-close-modal.svg" alt="Close Back Project"
+          data-close="selectReward" loading="lazy">
       </header>
       <p class="back-project__description">
         Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
@@ -235,8 +240,8 @@
       <div class="card card--pledge" data-pledgeCard="">
         <div class="card__flex-wrapper">
           <header class="card__header">
-            <label class="card__label" for="pledge">
-              <input type="radio" class="card__radio" name="pledge" checked>
+            <label class="card__label" for="noReward">
+              <input id="noReward" type="radio" class="card__radio" name="noReward" checked>
             </label>
 
             <h2 class="card__title">Pledge with no reward</h2>
@@ -253,8 +258,8 @@
       <div id="bambooModalCard" class="card card--pledge">
         <div class="card__flex-wrapper">
           <header class="card__header">
-            <label class="card__label" for="pledge">
-              <input id="bambooRadio" class="card__radio" type="radio" name="pledge">
+            <label class="card__label" for="bambooRadio">
+              <input id="bambooRadio" class="card__radio" type="radio" name="bambooRadio">
             </label>
             <div class="card__inner-flex">
               <h2 class="card__title">Bamboo Stand</h2>
@@ -278,18 +283,20 @@
       <div id="bambooPopup" class="card card--popup">
         <div class="card--popup__flex-wrapper">
           <p class="card--popup__description">Enter your pledge</p>
-          <label for="card--popup__pledge-amount">
-            <input id="bambooInput" class="card--popup__input br-33" type="text" name="card--popup__pledge-amount" placeholder="$25" data-input="">
+          <div class="card--popup__inner-flex">
+            <label for="bambooInput">
+              <input id="bambooInput" class="card--popup__input br-33" type="text" name="bambooInput" placeholder="$25" data-input="">
+            </label>
             <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward" data-backBambooProject="">Continue</button>
-          </label>
+          </div>
         </div>
       </div>
 
       <div id="blackEditionModalCard" class="card card--pledge">
         <div class="card__flex-wrapper">
           <header class="card__header">
-            <label class="card__label" for="pledge">
-              <input id="blackEditionRadio" class="card__radio" type="radio" name="pledge">
+            <label class="card__label" for="blackEditionRadio">
+              <input id="blackEditionRadio" class="card__radio" type="radio" name="blackEditionRadio">
             </label>
             <div class="card__inner-flex">
               <h2 class="card__title">Black Edition Stand</h2>
@@ -312,18 +319,20 @@
       <div id="blackEditionPopup" class="card card--popup">
         <div class="card--popup__flex-wrapper">
           <p class="card--popup__description">Enter your pledge</p>
-          <label for="card--popup__pledge-amount">
-            <input id="blackEditionInput" class="card--popup__input br-33" type="text" name="card--popup__pledge-amount" placeholder="$75" data-input="">
+          <div class="card--popup__inner-flex">
+            <label for="blackEditionInput">
+              <input id="blackEditionInput" class="card--popup__input br-33" type="text" name="blackEditionInput" placeholder="$75" data-input="">
+            </label>
             <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward" data-backBlackEditionProject="">Continue</button>
-          </label>
+          </div>
         </div>
       </div>
 
       <div id="mahoganyModalCard" class="card card--pledge">
         <div class="card__flex-wrapper">
           <header class="card__header">
-            <label class="card__label" for="pledge">
-              <input id="mahoganyRadio" class="card__radio" type="radio" name="pledge">
+            <label class="card__label" for="mahoganyRadio">
+              <input id="mahoganyRadio" class="card__radio" type="radio" name="mahoganyRadio">
             </label>
             <div class="card__inner-flex">
               <h2 class="card__title">Mahogany Special Edition</h2>
@@ -347,10 +356,15 @@
       <div id="mahoganyPopup" class="card card--popup">
         <div class="card--popup__flex-wrapper">
           <p class="card--popup__description">Enter your pledge</p>
-          <label for="card--popup__pledge-amount">
-            <input id="mahoganyInput" class="card--popup__input br-33" type="text" name="pledge-amount" placeholder="$200" data-input="">
-            <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward" data-backMahoganyProject="">Continue</button>
-          </label>
+          <div class="card--popup__inner-flex">
+            <label for="mahoganyInput">
+              <input id="mahoganyInput" class="card--popup__input br-33" type="text" name="mahoganyInput"
+                placeholder="$200" data-input="">
+            </label>
+            <button class="btn btn--primary btn--sm" data-open="thankYou" data-close="selectReward"
+              data-backMahoganyProject="">Continue
+            </button>
+          </div>
         </div>
       </div>
     </div>
