fixed radio names

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="card__flex-wrapper">
           <header class="card__header">
             <label class="card__label" for="noReward">
-              <input id="noReward" type="radio" class="card__radio" name="noReward" checked>
+              <input id="noReward" type="radio" class="card__radio" name="card--pledge" checked>
             </label>
 
             <h2 class="card__title">Pledge with no reward</h2>
@@ -259,7 +259,7 @@
         <div class="card__flex-wrapper">
           <header class="card__header">
             <label class="card__label" for="bambooRadio">
-              <input id="bambooRadio" class="card__radio" type="radio" name="bambooRadio">
+              <input id="bambooRadio" class="card__radio" type="radio" name="card--pledge">
             </label>
             <div class="card__inner-flex">
               <h2 class="card__title">Bamboo Stand</h2>
@@ -296,7 +296,7 @@
         <div class="card__flex-wrapper">
           <header class="card__header">
             <label class="card__label" for="blackEditionRadio">
-              <input id="blackEditionRadio" class="card__radio" type="radio" name="blackEditionRadio">
+              <input id="blackEditionRadio" class="card__radio" type="radio" name="card--pledge">
             </label>
             <div class="card__inner-flex">
               <h2 class="card__title">Black Edition Stand</h2>
@@ -332,7 +332,7 @@
         <div class="card__flex-wrapper">
           <header class="card__header">
             <label class="card__label" for="mahoganyRadio">
-              <input id="mahoganyRadio" class="card__radio" type="radio" name="mahoganyRadio">
+              <input id="mahoganyRadio" class="card__radio" type="radio" name="card--pledge">
             </label>
             <div class="card__inner-flex">
               <h2 class="card__title">Mahogany Special Edition</h2>
